[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-feather-m4"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
# must add samd51 feature, samd51j19 alone fails with lots of not found errors
atsamd-hal = { version = "0.4.1", default_features = false, features = ["samd51", "samd51j19a"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
