[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-feather-m4"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
# must add samd51 feature, samd51j19 alone fails with lots of not found errors
# feather_m4 = { git = "https://github.com/tedsta/atsamd", branch = "feather_m4", features = ["usb"] }
feather_m4 = { git = "https://github.com/tedsta/atsamd", branch = "feather_m4" }
smart-leds = "0.1.0"
nb = "0.1.2"
ws2812-timer-delay = "0.1.0"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
# reduce number of codegen units to increase optimizations
codegen-units = 1
# don't include symbols as they double the binary size
debug = false
# enable link time optimization (total optimization of the binary)
lto = true
incremental = false
# optimize for size
opt-level = "z"
# remove code that unwinds the stack and produces a backtrace
panic = "abort"
